--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+fabric = "*"
 
 [dev-packages]
 coverage = "*"
 pytest = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
